src/objects/Sales_Order_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CC_Sales_Order__c</fullName>
        <label>CC Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Sales Order Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClearChoice_Center_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClearChoice Center Part</label>
        <referenceTo>ClearChoice_Center_Part__c</referenceTo>
        <relationshipLabel>Sales Order Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClearChoice_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClearChoice Part</label>
        <referenceTo>ClearChoice_Part__c</referenceTo>
        <relationshipLabel>Sales Order Line Items</relationshipLabel>
        <relationshipName>Sales_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Cost__c</fullName>
        <formula>if(ISBLANK(ClearChoice_Center_Part__c), 0, Quantity__c * Unit_Cost__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Note__c</fullName>
        <label>Line Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Tax_Total__c</fullName>
        <formula>/*if( ISBLANK( ClearChoice_Part__c ) , 0, 
if( ClearChoice_Part__r.Is_Taxable__c , Quantity__c * Unit_Price__c * (CC_Sales_Order__r.Tax_Rate__c/100) ,0))*/

/*if( ISBLANK( ClearChoice_Part__c ) , 0, 
if( ClearChoice_Part__r.Is_Taxable__c, Quantity__c * Unit_Price__c * 
if( CC_Sales_Order__r.Shipping_Out_Of_State__c , 0,(CC_Sales_Order__r.Tax_Rate__c/100)) ,0))*/

if(ISBLANK(ClearChoice_Center_Part__c), 0,
    if(ClearChoice_Center_Part__r.Part__r.Is_Taxable__c, Quantity__c * Unit_Price__c *
    if(CC_Sales_Order__r.Shipping_Out_Of_State__c, 0, (CC_Sales_Order__r.Tax_Rate__c/100)), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Total__c</fullName>
        <formula>if(ISBLANK(ClearChoice_Center_Part__c), 0, Quantity__c * Unit_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Unit Cost</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Order Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>